--- a/learn.html
+++ b/learn.html
@@ -108,7 +108,7 @@
                 </td>
             </tr>
             <tr style="width:100%;background-image:url(img/ABC_Design_Agency.jpg );min-height: 400px;background-repeat: no-repeat;background-size: cover;">
-                <td style="width:100%;text-align: center;padding-bottom: 5%;" height="200px">
+                <td style="width:100%;text-align: center;padding-bottom: 5%;color:#fff" height="200px">
                     <h2>Design Agency</h2>
                     <h5>We help you to grow with your customer ease and satisfaction</h5>
                     <a href="" style="background-color: #001a00;border: none;color: white;
