--- a/kusum.html
+++ b/kusum.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About Me</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="https://drive.google.com/file/d/17DjMT8Rrx2Jj0wTNut3VnAu7xoF5gPNW/view?usp=drive_link">Resume</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
