--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-     <!--#include file="header.html" -->
+     <!--#include file="/header.html" -->
  
 <main>
     <section class="aboutMe">
