--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
     
 </head>
 <body>
-     <!--#include file="/header.html" -->
+     <?php include "./header.html" ?>
+
  
 <main>
     <section class="aboutMe">
