--- a/about.html
+++ b/about.html
@@ -14,14 +14,55 @@
     
 </head>
 <body>
-     <?php include "header.html" ?>
+    <header>
+        <nav>
+            <div class="lft">
+                Kusum's Portfolio
+            </div>
+            <div class="rht">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="https://drive.google.com/file/d/17DjMT8Rrx2Jj0wTNut3VnAu7xoF5gPNW/view?usp=drive_link">Resume</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
- 
+
 <main>
     <section class="aboutMe">
         Hello kusum
     </section>
 </main>
-    
+<footer>
+    <div class="footer-div">
+        <div class="footerFirst">
+            <h2>Kusum's Portfolio</h2>
+        </div>          
+        <div class="footerSecond">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="footerThird">
+            <ul>
+                <li>
+                    <a href="#"><img src="img/facebook.png" width="30"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="img/gmail.png"width="30"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="img/twitter.png" width="30"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
