--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             </div>
             <div class="rht">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="https://drive.google.com/file/d/17DjMT8Rrx2Jj0wTNut3VnAu7xoF5gPNW/view?usp=drive_link">Resume</a></li>
                     <li><a href="contact.html">Contact</a></li>
