--- a/kusum.html
+++ b/kusum.html
@@ -79,13 +79,10 @@
             <div class="footerThird">
                 <ul>
                     <li>
-                        <a href="#"><img src="img/facebook.png" width="30"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100089400799392"><img src="img/facebook.png" width="30"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/gmail.png"width="30"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/twitter.png" width="30"></a>
+                        <a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=app&authuser=0"><img src="img/gmail.png"width="30"></a>
                     </li>
                 </ul>
             </div>
