--- a/kusum.html
+++ b/kusum.html
@@ -82,7 +82,7 @@
                         <a href="https://www.facebook.com/profile.php?id=100089400799392"><img src="img/facebook.png" width="30"></a>
                     </li>
                     <li>
-                        <a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=app&authuser=0"><img src="img/gmail.png"width="30"></a>
+                        <a href="mailto:kusumrawat1981@gmail.com"><img src="img/gmail.png"width="30"></a>
                     </li>
                 </ul>
             </div>
