--- a/about.html
+++ b/about.html
@@ -51,16 +51,13 @@
         </div>
         <div class="footerThird">
             <ul>
-                <li>
-                    <a href="#"><img src="img/facebook.png" width="30"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/gmail.png"width="30"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/twitter.png" width="30"></a>
-                </li>
-            </ul>
+                    <li>
+                        <a href="https://www.facebook.com/profile.php?id=100089400799392"><img src="img/facebook.png" width="30"></a>
+                    </li>
+                    <li>
+                        <a href="mailto:kusumrawat1981@gmail.com"><img src="img/gmail.png"width="30"></a>
+                    </li>
+                </ul>
         </div>
     </div>
 </footer>
